--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 Этот справочник по физике разработан автором для упрощения подготовки к сдаче государственного экзамена по физике
 специалитета "физика".
+Лицензия: GNU FDL v1.3 или более поздняя И/ИЛИ CC-BY-SA 4.0
 
 запуск make соберет pdf-файл main.pdf 
 запуск make main-book.pdf соберет дополнительно файл main-book.pdf для печати буклетом
