--- a/main-book.tex
+++ b/main-book.tex
@@ -1,6 +1,5 @@
 \documentclass{extbook}
 \usepackage[14pt]{extsizes}
-%\usepackage{hyperref}
 \usepackage[matrix,arrow,curve]{xy}
 \usepackage{./ed}
 \author{\it Емельянов Эдуард Владимирович\\\it Емельянова Ал\"ена Викторовна}
@@ -32,8 +31,10 @@
  \include{liter}
  \addcontentsline{toc}{chapter}{Предметный указатель}\markboth{Предметный}{указатель}
  \input{main.ind}
+ \include{fdl-1.3}
  \pagestyle{empty}
  \newpage\
 %  \newpage\
+\selectlanguage{russian}
  \tirazh{1}\back
 \end{document}
