--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,7 @@
 \begin{wrapfigure}{#1}{\myflt}
 #2\end{wrapfigure}}
 \title{\bf Методические рекомендации по подготовке к ГАК\\\it для студентов
-специальности <<физика>>}
+специальности <<физика>>\thanks{License: GNU FDL and/or \cc\bysa}}
 \author{\it Емельянов Эдуард Владимирович\\\it Емельянова Ал\"ена Викторовна}
 \date{}
 \renewcommand{\caption}[1]{\hbox to\textwidth{\hfill #1\hfill}}
@@ -48,6 +48,8 @@
 \addcontentsline{toc}{chapter}{Предметный указатель}\markboth{Предметный
 указатель}{Предметный указатель}
 \input{main.ind}
+\small
+\include{fdl-1.3}
 %\tirazh{1}
 %\back
 \end{document}
